# MOTION-FD

./: CMakeLists.txt  README.md  benchmarkparser.py
circuits/int/: msb_adder_16_log.bristol  msb_adder_16_logp1.bristol  msb_adder_32_log.bristol  msb_adder_32_logp1.bristol  msb_adder_64_log.bristol  msb_adder_64_logp1.bristol  msb_adder_8_log.bristol  msb_adder_8_logp1.bristol
fbs/: message.fbs
src/examples/: CMakeLists.txt  DEtI_benchmarks.cpp  DEtI_benchmarks.h  astra_benchmark.cpp  auxiliator_benchmark.cpp  socium_benchmark.cpp  swift_benchmark.cpp
src/motioncore/: CMakeLists.txt
src/motioncore/base/: backend.cpp  backend.h  party.h
src/motioncore/communication/: communication_layer.cpp  communication_layer.h  transport.cpp  transport.h
src/motioncore/executor/: gate_executor.cpp  gate_executor.h
src/motioncore/primitives/: blake2b.h  pseudo_random_generator.cpp
src/motioncore/protocols/: share_wrapper.cpp  share_wrapper.h
src/motioncore/protocols/astra/: astra_gate.cpp  astra_gate.h  astra_share.h  astra_verifier.cpp  astra_verifier.h  astra_wire.cpp  astra_wire.h
src/motioncore/protocols/auxiliator/: auxiliator_gate.cpp  auxiliator_gate.h  auxiliator_share.cpp  auxiliator_share.h  auxiliator_verifier.cpp  auxiliator_verifier.h  auxiliator_wire.cpp  auxiliator_wire.h
src/motioncore/statistics/: analysis.cpp  run_time_statistics.cpp  run_time_statistics.h
src/motioncore/utility/: typedefs.h  z2_integer.h
src/test/: CMakeLists.txt  test_astra.cpp  test_auxiliator.cpp  test_boolean_astra.cpp  test_boolean_auxiliator.cpp  test_swift.cpp
(+30 files in other folders)
